<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SafeSend</string>
    <string name="action_settings">Settings</string>
    <string name="no_value"></string>
    <string name="button_encrypt">Encrypt and send</string>
    <string name="button_update_messages">Update . . .</string>

    <string name="hint_send_message">Write something . . .</string>

    <string name="from">From:</string>
    <string name="type">Type:</string>
    <string name="message_to">Message to</string>
    <string name="empty_message">You can\'t send a empty message.</string>
    <string name="empty_message_view">You have no messages.</string>

    <string name="failed_pub_key">Failed to get the receivers public key.
    </string>
    <string name="failed_encryption">Failed to encrypt the message.</string>
    <string name="failed_send_message">Failed to send the message.</string>
    <string name="failed_message_list">Failed to load latest messages.</string>
    <string name="failed_message_by_id">Failed to load the message.</string>
    <string name="failed_decryption">Failed to decrypt the message.</string>

    <string name="success_send_message">Message sent.</string>

    <string name="status_get_pubkey">Receiving public key</string>
    <string name="status_encrypting">Encrypting message</string>
    <string name="status_sending">Sending message</string>
    <string name="status_fetching_message">Receiving message</string>
    <string name="status_decrypting">Decrypting message</string>

    <string name="icon_user">&#xf007;</string>
    <string name="login_password">Password</string>
    <string name="login_email">Email address</string>
    <string name="login_button_login">Login</string>
    <string name="login_button_register">Register here</string>
    <string name="register_password">Password</string>
    <string name="regsiter_display_name">Name</string>
    <string name="register_email">Email address</string>
    <string name="register_button_register">Register me</string>
    <string name="register_title">Register new account</string>
    
    <string name="register_fail_displayname">You must enter a name between 4 and 30 characters.</string>
    <string name="register_fail_displayname_char">Name contains illegal characters.</string>
    <string name="register_fail_email">You must enter a valid email.</string>
    <string name="register_fail_password">You must enter a password of at least 8 characters.</string>
    <string name="register_fail_already_exist">That username or emailadress is already registered.</string>
    
    <string name="no_account">No account yet?</string>
    <string name="login_label">Welcome back</string>

    <string name="action_send_new_message">Send new message</string>
    <string name="action_send_message">Send</string>
    <string name="action_update_messages">Update</string>
    <string name="action_delete_conversation">Delete</string>
    
    <string name="prompt_title_delete_conversation">Delete conversation</string>
    <string name="prompt_message_delete_conversation">Are you sure you want to delete this conversation?</string>
    
    <string name="title_conversations">Conversations</string>
    <string name="title_send_message">Send message</string>
    <string name="title_you_and">You and</string>
    <string name="title_send_to">Message to</string>
    <string name="title_login">Login to SafeSend</string>
    <string name="title_register">Register new account</string>


</resources>
