<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="se.teamgejm.safesend.MainActivity">
      
    <item
            android:id="@+id/action_delete_conversation"
            android:showAsAction="always"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/action_delete_conversation"/>

    <item
            android:id="@+id/action_send_new_message"
            android:showAsAction="always"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/action_send_new_message"/>

    <item
            android:id="@+id/action_update_messages"
            android:showAsAction="always"
            android:icon="@drawable/ic_update"
            android:title="@string/action_update_messages"/>

</menu>
