<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:padding="16dp">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_container"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/no_account"
                android:id="@+id/no_account"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button_register"
                android:id="@+id/login_button_register"
                android:layout_below="@+id/no_account"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_container"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:id="@+id/login_container" android:visibility="gone">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/login_label"
                android:id="@+id/login_label"
                android:layout_gravity="center_horizontal"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/login_password"
                android:hint="@string/login_password"
                android:layout_marginTop="16dp"/>
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button_login"
                android:id="@+id/login_button_login"
                android:layout_marginTop="16dp"
                />
    </LinearLayout>
    <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_progress_bar" android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" android:visibility="gone"/>
</RelativeLayout>
